--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\namesection{Amit}{Kumar}{ \urlstyle{same}\url{http://iamit.in} \\
-\href{mailto:dtu.amit@gmail.com}{dtu.amit@gmail.com} | +91 9811522423
+%\namesection{Amit}{Kumar}{ \urlstyle{same}\url{http://iamit.in} \\
+%\href{mailto:dtu.amit@gmail.com}{dtu.amit@gmail.com} | +91 9811522423
+%}
+
+\namesection{Gaurav}{Dhingra}{ \urlstyle{same}\url{https://gxyd.github.io} \\
+\href{mailto:gauravdhingra.gxyd@gmail.com}{@gauravdhingra.gxydgmail.com} | +91 8791414504
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -81,12 +85,16 @@
 
 \section{Education} 
 
-\subsection{Delhi Tech. University}
-\descript{(Delhi College of Engineering)}
-\descript{Mathematics \& Computing Engineering}
-\location{2012 - 2016 | New Delhi \\ Aggregate: 61.40\%}
-\sectionsep
+%\subsection{Delhi Tech. University}
+%\descript{(Delhi College of Engineering)}
+%\descript{Mathematics \& Computing Engineering}
+%\location{2012 - 2016 | New Delhi \\ Aggregate: 61.40\%}
+%\sectionsep
 
+\subsection{Indian Institute of Technology Roorkee}
+\descript{Master of Science, Bachelor of Science in Applied Mathematics}
+\location{2013 - 2018 (expected) \\ GPA: 7.188/10%}
+\sectionsep
 
 % \descript{BS in Computer Science}
 % \location{Expected May 2014 | Ithaca, NY}
