--- a/main.tex
+++ b/main.tex
@@ -92,8 +92,9 @@
 %\sectionsep
 
 \subsection{Indian Institute of Technology Roorkee}
-\descript{Master of Science, Bachelor of Science in Applied Mathematics}
-\location{2013 - 2018 (expected) \\ GPA: 7.188/10%}
+\descript{(Delhi College of Engineering)}
+\descript{Mathematics \& Computing Engineering}
+\location{2012 - 2016 | New Delhi \\ Aggregate: 61.40\%}
 \sectionsep
 
 % \descript{BS in Computer Science}
