Made some more changes

--- a/main.tex
+++ b/main.tex
@@ -77,13 +77,13 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{minipage}[t]{0.33\textwidth} 
+\begin{minipage}[t]{0.33\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EDUCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Education} 
+\section{Education}
 
 %\subsection{Delhi Tech. University}
 %\descript{(Delhi College of Engineering)}
@@ -91,10 +91,9 @@
 %\location{2012 - 2016 | New Delhi \\ Aggregate: 61.40\%}
 %\sectionsep
 
-\subsection{Indian Institute of Technology Roorkee}
-\descript{(Delhi College of Engineering)}
-\descript{Mathematics \& Computing Engineering}
-\location{2012 - 2016 | New Delhi \\ Aggregate: 61.40\%}
+\subsection{Indian Institute of \\ Technology Roorkee}
+\descript{Master of Science, Bachelor of Science in Applied Mathematics}
+\location{2013 - 2018 (expected) \\ GPA: 7.188/10\%}
 \sectionsep
 
 % \descript{BS in Computer Science}
@@ -106,16 +105,14 @@
 % Major GPA: 3.94 / 4.0}
 % \sectionsep
 
-\subsection{Saint Giri School}
-\location{Grad. May 2011|  Delhi, India}
-\descript{Batch Rank 1}
-\sectionsep
+\section{Open Source}
+    \textbullet{} \href{https://github.com/sympy/sympy}{\custombold{SymPy}} \textbullet{} \href{http://mpmath.org/}{\custombold{mpmath}} \textbullet{} \href{https://www.libreoffice.org}{\custombold{LibreOffice}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Links} 
+\section{Link}
 Github:// \href{https://github.com/aktech}{\custombold{aktech}} \\
 Web:// \href{http://iamit.in/}{\custombold{iamit.in}} \\
 Blog:// \href{http://iamit.in/blog/}{\custombold{iamit.in/blog}} \\
@@ -152,14 +149,15 @@ Scientific Computing, etc \\
 \section{Skills}
 \subsection{Programming}
 \location{Proficient:}
-Python \\
+\textbullet{} Python \\
+\location{Competent:}
+\textbullet{} C \textbullet{} C++ \textbullet{} BASH
 \location{Familiar:}
-C \textbullet{} C++ \textbullet{} PHP \textbullet{} Javascript \\ HTML \textbullet{} CSS \textbullet{} \\
+\textbullet{} JavaScript \textbullet{} MySQL \textbullet{} CSS
 \subsection{Operating System}
-Mac OSX \textbullet{} Linux \textbullet{} Windows
+\textbullet{} GNU/Linux \textbullet{} Windows
 \subsection{Tools \& Framework}
-Django \textbullet{} Bootstrap \\
-Git \textbullet SublimeText
+\textbullet Vim \textbullet{} Git \textbullet{} Bootstrap
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -167,15 +165,7 @@ Git \textbullet SublimeText
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Conferences}
-\location{International:}
-PyCon UK, PyCon Asia Pacific \\
-FOSSASIA 2016, Singapore \\
-SciPy 2016, Austin, TX \\
-PyGotham 2016, New York \\
-\location{National:}
-\textbullet{} Gnome Asia Summit 2016 \\
-\textbullet{} PyDelhi Conference 2016 \\
-\textbullet{} PyCon Indian 2016, 2015
+\textbullet{} PyDelhi 2016 \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
