--- a/main.tex
+++ b/main.tex
@@ -68,7 +68,7 @@
 %}
 
 \namesection{Gaurav}{Dhingra}{ \urlstyle{same}\url{https://gxyd.github.io} \\
-\href{mailto:gauravdhingra.gxyd@gmail.com}{@gauravdhingra.gxydgmail.com} | +91 8791414504
+\href{mailto:gauravdhingra.gxyd@gmail.com}{gauravdhingra.gxyd@gmail.com} | +91 8791414504
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -113,12 +113,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Link}
-Github:// \href{https://github.com/aktech}{\custombold{aktech}} \\
-Web:// \href{http://iamit.in/}{\custombold{iamit.in}} \\
-Blog:// \href{http://iamit.in/blog/}{\custombold{iamit.in/blog}} \\
-LinkedIn://  \href{https://www.linkedin.com/in/iaktech}{\custombold{iaktech}} \\
-Twitter://  \href{https://twitter.com/iaktech}{\custombold{@iaktech}} \\
-Quora://  \href{https://www.quora.com/Amit-Kumar-516}{\custombold{Amit-Kumar-516}}
+Github:// \href{https://github.com/gxyd}{\custombold{gxyd}} \\
+Web:// \href{https://gxyd.github.io}{\custombold{gxyd.github.io}} \\
+Twitter://  \href{https://twitter.com/axyd0000}{\custombold{@axyd0000}} \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -135,11 +132,14 @@ Quora://  \href{https://www.quora.com/Amit-Kumar-516}{\custombold{Amit-Kumar-516
 % \sectionsep
 
 \subsection{Undergraduate}
+Design \& Analysis of Algorithms \\
+Graph Theory \\
 Data Structures \\
-Operating Systems \\
-Algorithm Design \& Analysis \\
-Object Oriented Programming \\
-Scientific Computing, etc \\
+Introduction to Linux \\
+Statistical Inference \\
+Linear Algebra \\
+Discrete Mathematics \\
+Copyright
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -151,9 +151,9 @@ Scientific Computing, etc \\
 \location{Proficient:}
 \textbullet{} Python \\
 \location{Competent:}
-\textbullet{} C \textbullet{} C++ \textbullet{} BASH
+\textbullet{} C \textbullet{} C++ \textbullet{} BASH \\
 \location{Familiar:}
-\textbullet{} JavaScript \textbullet{} MySQL \textbullet{} CSS
+\textbullet{} JavaScript \textbullet{} MySQL \textbullet{} CSS \\
 \subsection{Operating System}
 \textbullet{} GNU/Linux \textbullet{} Windows
 \subsection{Tools \& Framework}
@@ -174,9 +174,9 @@ Scientific Computing, etc \\
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\end{minipage} 
+\end{minipage}
 \hfill
-\begin{minipage}[t]{0.66\textwidth} 
+\begin{minipage}[t]{0.66\textwidth}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     EXPERIENCE
@@ -184,41 +184,47 @@ Scientific Computing, etc \\
 
 \section{Experience}
 
-\runsubsection{Zomato}
-\descript{| Software Development Engineer }
-\location{October 2016 - Present}
+\runsubsection{Google Summer of Code 2017}
+\descript{| SymPy }
+\location{May 30 - Aug 21, 2017}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\sectionsep
-
-\runsubsection{HackerEarth}
-\descript{| Software Engineering Intern }
-\location{R \& D Team | June 2016 - September 2016}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Facilitated the collection of standard error logs.
-\item Wrote an Error Log Parser for C, C++, Python and Java.
-\item Wrote a Checker for comparing user output with expected output to give appropriate suggestion for frequently occurring cases. 
-\end{tightemize}
 \sectionsep
 
 \runsubsection{Google Summer of Code 2016}
-\descript{| Mentor }
-\location{Mentor for SymPy Project}
+\descript{| SymPy }
+\location{April 22 - Aug 23, 2016}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}\item Mentored two students for the development of solvers in SymPy. \href{https://summerofcode.withgoogle.com/projects/#6299625891823616}{[1]}, 
-\href{https://summerofcode.withgoogle.com/projects/#5440294841483264}{[2]}
-\end{tightemize}
 \sectionsep
 
-\runsubsection{Google Summer of Code 2015}
-\descript{| Python Software Foundation (SymPy) }
-\location{May 2015 – Aug 2015}
-\begin{tightemize}
-\item Worked on Solvers Module. Improved Mathematical robustness of new solvers module.
-\item Implemented Complex Sets: Representing infinite solutions in the argand plane;
-\item Linear System solver;
-\item Differential Calculus Methods.\end{tightemize}
-\sectionsep
+%\runsubsection{HackerEarth}
+%\descript{| Software Engineering Intern }
+%\location{R \& D Team | June 2016 - September 2016}
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\begin{tightemize}
+%\item Facilitated the collection of standard error logs.
+%\item Wrote an Error Log Parser for C, C++, Python and Java.
+%\item Wrote a Checker for comparing user output with expected output to give appropriate suggestion for frequently occurring cases. 
+%\end{tightemize}
+%\sectionsep
+
+%\runsubsection{Google Summer of Code 2016}
+%\descript{| SymPy }
+%\location{Mentor for SymPy Project}
+%\vspace{\topsep} % Hacky fix for awkward extra vertical space
+%\begin{tightemize}\item Mentored two students for the development of solvers in SymPy. \href{https://summerofcode.withgoogle.com/projects/#6299625891823616}{[1]}, 
+%\href{https://summerofcode.withgoogle.com/projects/#5440294841483264}{[2]}
+%\end{tightemize}
+%\sectionsep
+
+%\runsubsection{Google Summer of Code 2015}
+%\descript{| Python Software Foundation (SymPy) }
+%\location{May 2015 – Aug 2015}
+%\begin{tightemize}
+%\item Worked on Solvers Module. Improved Mathematical robustness of new solvers module.
+%\item Implemented Complex Sets: Representing infinite solutions in the argand plane;
+%\item Linear System solver;
+%\item Differential Calculus Methods.\end{tightemize}
+%\sectionsep
 
 % \runsubsection{SymEngine}
 % \descript{| Open Source Contributor}
@@ -233,19 +239,20 @@ Scientific Computing, etc \\
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{PROJECTS}
-\runsubsection{CodePlay}
-\descript{| Online Code Player}
-Built a Django web application to Compile and Run code using HackerEarth API.
+\runsubsection{Series Convergence, Singularity and Accumulation Bounds in SymPy}
+\descript{| Academic Project}
+\location{May 30 - Aug 21, 2017}
+Academic Project on implementation of sum and product convergence of series in SymPy, a computer algebra system.
+Also implemented the Accumulation Bounds for assistance in computation of limits in SymPy.
 \sectionsep
 
-\runsubsection{DTU Resume Manager Scraper}
-\descript{Scrapping }
-A Python Script hosted on Google App Engine, which logins to the Resume Manager of Delhi Technological University, scraps latest announcements and sends a mail to all the subscribers. Repeats (Cron) this process every minute.
+\runsubsection{Finding the level of Awareness and Acceptance of Ayurvedic products}
+\descript{Marketing Research}
+
 \sectionsep
 
-\runsubsection{Criclive}
-\descript{CLI}
-A command line utility to get real time scores of all the live cricket matches around the world.
+\runsubsection{Meetler}
+\descript{| Mircrosoft Code.Fun.Do}
 
 \sectionsep
 
