A few more changes

--- a/main.tex
+++ b/main.tex
@@ -164,8 +164,8 @@ Copyright
 %     CONFERENCES
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Conferences}
-\textbullet{} PyDelhi 2016 \\
+\section{Talks}
+\textbullet{} Lightning talk at PyDelhi 2016 \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -278,14 +278,6 @@ Also implemented the Accumulation Bounds for assistance in computation of limits
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SPEAKING
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Speaking}
-\runsubsection{TALKS}
-\begin{tightemize}
-\item Introducing MetaClasses", PyCon UK, Cardiff.
-\item Symbolic Computation with SymPy", FOSSASIA 2016, Singapore.\\ \& SciPy 2016, Austin TX.
-\item Demystifying Python MRO, PyGotham 2016, New York. (*Selected talks listed)
-\end{tightemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     PUBLICATIONS
