--- a/main.tex
+++ b/main.tex
@@ -131,7 +131,7 @@ Twitter://  \href{https://twitter.com/axyd0000}{\custombold{@axyd0000}} \\
 % Cloud Computing \\
 % \sectionsep
 
-\subsection{Undergraduate}
+\subsection{Coursework}
 Design \& Analysis of Algorithms \\
 Graph Theory \\
 Data Structures \\
