Make a few changes in resume

--- a/main.tex
+++ b/main.tex
@@ -184,16 +184,33 @@ Copyright
 
 \section{Experience}
 
+\runsubsection{SymPy}
+\descript{| Pull Request Manager }
+\location{September 2017 - Present}
+\sectionsep
+
 \runsubsection{Google Summer of Code 2017}
 \descript{| SymPy }
-\location{May 30 - Aug 21, 2017}
+\location{May 4 - July 22, 2017}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+
+\item Worked on extending the computations using the Risch integration algorithm.
+\item Implemented algorithm for parametric logarithmic derivative problem.
+\item Trigonometric functions can now be integrated using the Risch algorithm.
+\end{tightemize}
 \sectionsep
 
 \runsubsection{Google Summer of Code 2016}
 \descript{| SymPy }
 \location{April 22 - Aug 23, 2016}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Worked on computational group theory.
+\item Created capability to do computation with Finite Groups and Finitely Presented Groups.
+\item Representing Finitely Presented Groups, free groups, semi group, free semigroup, and other group related algebraic structures.
+\item Respective algorithms for the computation of Normailizers, Centeralizer, Center, Order, Subgroups, Orbit etc.
+\end{tightemize}
 \sectionsep
 
 %\runsubsection{HackerEarth}
@@ -247,14 +264,21 @@ Also implemented the Accumulation Bounds for assistance in computation of limits
 \sectionsep
 
 \runsubsection{Finding the level of Awareness and Acceptance of Ayurvedic products}
-\descript{Marketing Research}
-
+\descript{| Marketing Research}
+\location{July - November 2015}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\begin{tightemize}
+\item Conducted a study with reference to the disruption caused by Patanjali Products in FMCG Markets.
+\item Tested multiple hypothesis based on analysis of the sample collected.
+\item Compared the degree to which the respondents perceived ease of use and usefulness of online marketing with demographical questions.
+\item Relationships among different factors were obtained using chi-square test.
+\end{tightemize}
 \sectionsep
 
-\runsubsection{Meetler}
-\descript{| Mircrosoft Code.Fun.Do}
-
-\sectionsep
+%\runsubsection{Meetler}
+%\descript{| Mircrosoft Code.Fun.Do}
+%
+%\sectionsep
 
 % \runsubsection{HashTweet}
 % \descript{PHP application}
