Add line about SymPy

--- a/main.tex
+++ b/main.tex
@@ -194,7 +194,7 @@ Copyright
 \location{May 4 - July 22, 2017}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-
+\item SymPy is a popular python library for symbolic computation with more than 4000 stars on github.
 \item Worked on extending the computations using the Risch integration algorithm.
 \item Implemented algorithm for parametric logarithmic derivative problem.
 \item Trigonometric functions can now be integrated using the Risch algorithm.
