Make changes according to @hargup 's suggestion

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 
 \subsection{Indian Institute of \\ Technology Roorkee}
 \descript{Master of Science, Bachelor of Science in Applied Mathematics}
-\location{2013 - 2018 (expected) \\ GPA: 7.188/10\%}
+\location{2013 - 2018 (expected) \\ GPA: 7.188/10}
 \sectionsep
 
 % \descript{BS in Computer Science}
@@ -135,11 +135,13 @@ Twitter://  \href{https://twitter.com/axyd0000}{\custombold{@axyd0000}} \\
 Design \& Analysis of Algorithms \\
 Graph Theory \\
 Data Structures \\
-Introduction to Linux \\
+Introduction to Linux {*}\\
 Statistical Inference \\
 Linear Algebra \\
 Discrete Mathematics \\
-Copyright
+Copyright {*}
+\\
+({*} are MOOCs)
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -165,7 +167,7 @@ Copyright
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Talks}
-\textbullet{} Lightning talk at PyDelhi 2016 \\
+\textbullet{} Lightning Talk "Why Python is good for mathematical computation", PyDelhi 2016 \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -187,14 +189,21 @@ Copyright
 \runsubsection{SymPy}
 \descript{| Pull Request Manager }
 \location{September 2017 - Present}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\vspace{\topsep}
+\begin{tightemize}
+\item SymPy is a popular python library for symbolic computation with more than 4000 stars on github.
+\item Responsible to ensure that SymPy pull requests get reviewed quickly and help in SymPy release process.
+\item A position funded by NumFOCUS.
+\item Chosen for the position since of being one of the top contributors to SymPy.
+\end{tightemize}
 \sectionsep
 
 \runsubsection{Google Summer of Code 2017}
 \descript{| SymPy }
-\location{May 4 - July 22, 2017}
+\location{May - July, 2017}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item SymPy is a popular python library for symbolic computation with more than 4000 stars on github.
 \item Worked on extending the computations using the Risch integration algorithm.
 \item Implemented algorithm for parametric logarithmic derivative problem.
 \item Trigonometric functions can now be integrated using the Risch algorithm.
@@ -203,13 +212,12 @@ Copyright
 
 \runsubsection{Google Summer of Code 2016}
 \descript{| SymPy }
-\location{April 22 - Aug 23, 2016}
+\location{April - Aug, 2016}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \begin{tightemize}
-\item Worked on computational group theory.
 \item Created capability to do computation with Finite Groups and Finitely Presented Groups.
-\item Representing Finitely Presented Groups, free groups, semi group, free semigroup, and other group related algebraic structures.
-\item Respective algorithms for the computation of Normailizers, Centeralizer, Center, Order, Subgroups, Orbit etc.
+\item Implemented coset enumeration algorithm for finitely presented groups.
+\item Reidemeister Schreier, low index subgroup algorithm for doing computation with subgroups and order of groups.
 \end{tightemize}
 \sectionsep
 
@@ -258,7 +266,8 @@ Copyright
 \section{PROJECTS}
 \runsubsection{Series Convergence, Singularity and Accumulation Bounds in SymPy}
 \descript{| Academic Project}
-\location{May 30 - Aug 21, 2017}
+\location{January - April, 2016}
+\vspace{\topsep}
 Academic Project on implementation of sum and product convergence of series in SymPy, a computer algebra system.
 Also implemented the Accumulation Bounds for assistance in computation of limits in SymPy.
 \sectionsep
@@ -272,6 +281,7 @@ Also implemented the Accumulation Bounds for assistance in computation of limits
 \item Tested multiple hypothesis based on analysis of the sample collected.
 \item Compared the degree to which the respondents perceived ease of use and usefulness of online marketing with demographical questions.
 \item Relationships among different factors were obtained using chi-square test.
+\item Concluded that most people would find online marketing of ayurvedic products useful.
 \end{tightemize}
 \sectionsep
 
