update resume to include scikit-learn

--- a/main.tex
+++ b/main.tex
@@ -106,7 +106,7 @@
 % \sectionsep
 
 \section{Open Source}
-    \textbullet{} \href{https://github.com/sympy/sympy}{\custombold{SymPy}} \textbullet{} \href{http://mpmath.org/}{\custombold{mpmath}} \textbullet{} \href{https://www.libreoffice.org}{\custombold{LibreOffice}}
+    \textbullet{} \href{https://github.com/sympy/sympy}{\custombold{SymPy}} \textbullet{} \href{http://scikit-learn.org/}{\custombold{scikit-learn}} \textbullet{} \href{http://mpmath.org/}{\custombold{mpmath}} \textbullet{} \href{https://www.libreoffice.org}{\custombold{LibreOffice}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
