--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 
 \subsection{Indian Institute of \\ Technology Roorkee}
 \descript{Master of Science, Bachelor of Science in Applied Mathematics}
-\location{2013 - 2018 (expected) \\ GPA: 7.188/10}
+\location{2013 - 2018 (expected) \\ GPA: 7.380/10}
 \sectionsep
 
 % \descript{BS in Computer Science}
@@ -188,7 +188,7 @@ Copyright {*}
 
 \runsubsection{SymPy}
 \descript{| Pull Request Manager }
-\location{September 2017 - Present}
+\location{September and December 2017, February 2018}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \vspace{\topsep}
 \begin{tightemize}
