add Digital Aristotle and Julia open source interest

--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@
 
 \subsection{Indian Institute of \\ Technology Roorkee}
 \descript{Master of Science, Bachelor of Science in Applied Mathematics}
-\location{2013 - 2018 (expected) \\ GPA: 7.380/10}
+\location{2013 - 2018 \\ GPA: 7.380/10}
 \sectionsep
 
 % \descript{BS in Computer Science}
@@ -106,7 +106,7 @@
 % \sectionsep
 
 \section{Open Source}
-    \textbullet{} \href{https://github.com/sympy/sympy}{\custombold{SymPy}} \textbullet{} \href{http://scikit-learn.org/}{\custombold{scikit-learn}} \textbullet{} \href{http://mpmath.org/}{\custombold{mpmath}} \textbullet{} \href{https://www.libreoffice.org}{\custombold{LibreOffice}}
+    \textbullet{} \href{https://github.com/sympy/sympy}{\custombold{SymPy}} \textbullet{} \href{https://fluxml.ai/Flux.jl}{\custombold{Flux}} \textbullet{} \href{http://scikit-learn.org/}{\custombold{scikit-learn}} \textbullet{} \href{http://mpmath.org/}{\custombold{mpmath}} \textbullet{} \href{https://www.libreoffice.org}{\custombold{LibreOffice}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     LINKS
@@ -115,7 +115,7 @@
 \section{Link}
 Github:// \href{https://github.com/gxyd}{\custombold{gxyd}} \\
 Web:// \href{https://gxyd.github.io}{\custombold{gxyd.github.io}} \\
-Twitter://  \href{https://twitter.com/axyd0000}{\custombold{@axyd0000}} \\
+% Twitter://  \href{https://twitter.com/axyd0000}{\custombold{@axyd0000}} \\
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -153,13 +153,13 @@ Copyright {*}
 \location{Proficient:}
 \textbullet{} Python \\
 \location{Competent:}
-\textbullet{} C \textbullet{} C++ \textbullet{} BASH \\
+\textbullet{} Julia \textbullet{} BASH \\
 \location{Familiar:}
-\textbullet{} JavaScript \textbullet{} MySQL \textbullet{} CSS \\
+\textbullet{} JavaScript \textbullet{} MongoDB \\
 \subsection{Operating System}
 \textbullet{} GNU/Linux \textbullet{} Windows
 \subsection{Tools \& Framework}
-\textbullet Vim \textbullet{} Git \textbullet{} Bootstrap
+\textbullet Vim \textbullet{} Git
 \sectionsep
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -185,6 +185,17 @@ Copyright {*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experience}
+
+\runsubsection{Digital Aristotle}
+\descript{| Junior Research Engineer }
+\location{Bangalore, India | June 2018 - Present}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\vspace{\topsep}
+\begin{tightemize}
+\item Working on automatic mathematics question generation 
+\end{tightemize}
+\sectionsep
+
 
 \runsubsection{SymPy}
 \descript{| Pull Request Manager }
@@ -263,27 +274,28 @@ Copyright {*}
 %     RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{PROJECTS}
-\runsubsection{Series Convergence, Singularity and Accumulation Bounds in SymPy}
-\descript{| Academic Project}
-\location{January - April, 2016}
+\section{ML Open Source contributions}
+\runsubsection{Julia ecosystem for machine learning}
+\descript{| Open Source}
+\location{since September, 2020}
 \vspace{\topsep}
-Academic Project on implementation of sum and product convergence of series in SymPy, a computer algebra system.
-Also implemented the Accumulation Bounds for assistance in computation of limits in SymPy.
+Contributing to few open source machine learning and differentiable programming libraries written in Julia. For ex.
+\href{https://github.com/FluxML/Flux.jl}{\custombold{Flux}}, \href{https://github.com/FluxML/Zygote.jl}{\custombold{Zygote}}
+and \href{https://github.com/JuliaDiff/ChainRules.jl}{\custombold{ChainRules}}
 \sectionsep
 
-\runsubsection{Finding the level of Awareness and Acceptance of Ayurvedic products}
-\descript{| Marketing Research}
-\location{July - November 2015}
-\vspace{\topsep} % Hacky fix for awkward extra vertical space
-\begin{tightemize}
-\item Conducted a study with reference to the disruption caused by Patanjali Products in FMCG Markets.
-\item Tested multiple hypothesis based on analysis of the sample collected.
-\item Compared the degree to which the respondents perceived ease of use and usefulness of online marketing with demographical questions.
-\item Relationships among different factors were obtained using chi-square test.
-\item Concluded that most people would find online marketing of ayurvedic products useful.
-\end{tightemize}
-\sectionsep
+% \runsubsection{Finding the level of Awareness and Acceptance of Ayurvedic products}
+% \descript{| Marketing Research}
+% \location{July - November 2015}
+% \vspace{\topsep} % Hacky fix for awkward extra vertical space
+% \begin{tightemize}
+% \item Conducted a study with reference to the disruption caused by Patanjali Products in FMCG Markets.
+% \item Tested multiple hypothesis based on analysis of the sample collected.
+% \item Compared the degree to which the respondents perceived ease of use and usefulness of online marketing with demographical questions.
+% \item Relationships among different factors were obtained using chi-square test.
+% \item Concluded that most people would find online marketing of ayurvedic products useful.
+% \end{tightemize}
+% \sectionsep
 
 %\runsubsection{Meetler}
 %\descript{| Mircrosoft Code.Fun.Do}
