--- a/main.tex
+++ b/main.tex
@@ -148,11 +148,11 @@ Copyright {*}
 \section{Skills}
 \subsection{Programming}
 \location{Proficient:}
-\textbullet{} Python \\
+\textbullet{} Python \textbullet{} Kotlin \\
 \location{Competent:}
-\textbullet{} Julia \textbullet{} BASH \\
+\textbullet{} Typescript \textbullet{} BASH \\
 \location{Familiar:}
-\textbullet{} JavaScript \textbullet{} MongoDB \\
+\textbullet{} Julia \textbullet{} MongoDB \\
 \subsection{Operating System}
 \textbullet{} GNU/Linux \textbullet{} Windows
 \subsection{Tools \& Framework}
@@ -184,12 +184,26 @@ Copyright {*}
 \section{Experience}
 
 \runsubsection{Digital Aristotle}
-\descript{| Junior Research Engineer }
-\location{Bangalore, India | June 2018 - Present}
+\descript{| Senior Research Engineer }
+\location{Bangalore, India | April 2022 - Present}
 \vspace{\topsep} % Hacky fix for awkward extra vertical space
 \vspace{\topsep}
 \begin{tightemize}
-\item Working on automatic mathematics question generation 
+\item Worked in a cross-functional, agile based Geogebra's team to build a student centric math solver-engine for K-12 edTech
+\item SDK for parsing a mathematical expression from LaTeX to mathematical tree and internal form
+\item Tech stack: Kotlin, Gradle, Typescript, Node.js
+\end{tightemize}
+\sectionsep
+
+\runsubsection{Digital Aristotle}
+\descript{| Junior Research Engineer }
+\location{Bangalore, India | June 2018 - March 2022}
+\vspace{\topsep} % Hacky fix for awkward extra vertical space
+\vspace{\topsep}
+\begin{tightemize}
+\item Autosolver project in the Byju's BTLA app
+\item DSL for having step-by-step math templates
+\item Tech stack: Python, SymPy, Typescript, CI/CD
 \end{tightemize}
 \sectionsep
 
